# QQ-app

./: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig  sdkconfig.old
components/images/: CMakeLists.txt  a_down.c  a_jump.c  a_left.c  a_right.c  a_squat.c  a_up.c  b_down.c  b_jump.c  b_left.c  b_right.c  b_squat.c  b_up.c  jump.c  left.c  right.c  squat.c  up.c
components/qq_mqtt_client/: CMakeLists.txt  Kconfig.projbuild  qq_mqtt_client.c
components/qq_mqtt_client/includes/: qq_mqtt_client.h
main/: CMakeLists.txt  Kconfig.projbuild  app_wifi.c  button_handler.c  game_tab.c  main.c  quiz_tab.c  test_tab.c
main/includes/: app_wifi.h  button_handler.h  down.h  game_tab.h  quiz_tab.h  test_tab.h
